--- a/src/pages/components/Footer/Footer.css
+++ b/src/pages/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .soc {
   display: inline;
   width: 33.3vw;
-  font-family: 'OpenSansRegular', Arial, Helvetica, sans-serif;
+  font-family: "OpenSansRegular", Arial, Helvetica, sans-serif;
   font-size: 14px;
   line-height: 1.5;
   color: white;
@@ -9,9 +9,6 @@
   margin-right: 0px;
   margin-top: auto;
   margin-bottom: auto;
-}
-.footer-button{
-  width: 33.3%;
 }
 
 .tecnocampus-img {
@@ -28,6 +25,10 @@
 }
 
 @media (max-width: 320px) {
+  footer {
+    justify-content: center;
+    background-color: black;
+  }
   .soc {
     display: none;
   }
