--- a/src/pages/components/Layout/Layout.css
+++ b/src/pages/components/Layout/Layout.css
@@ -3,15 +3,25 @@
   padding: 0px;
   box-sizing: border-box;
   --header-footer-size: 5%;
-  --right-menu-size:12.5%;
-  --left-menu-size:12.5%;
+  --right-menu-size: 12.5%;
+  --left-menu-size: 12.5%;
+}
+
+h1 {
+  display: block;
+  font-size: 2em;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
 }
 
 body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  }
+}
 
 header {
   position: fixed;
@@ -21,32 +31,35 @@ header {
   height: var(--header-footer-size);
   background-color: lightgray;
   z-index: 1;
-
 }
 
 footer {
   position: fixed;
-  bottom:0px;
+  bottom: 0px;
   left: 0;
   width: 100%;
   height: var(--header-footer-size);
   background-color: grey;
   z-index: 1;
-
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
-
 
 @media screen and (max-width: 768px) {
   * {
-    --right-menu-size:0;
-    --left-menu-size:25%;
+    --right-menu-size: 0;
+    --left-menu-size: 25%;
   }
 }
 
 @media screen and (max-width: 328px) {
-  * {
-    --right-menu-size:0;
-    --left-menu-size:0;
-}
-}
+  footer {
+    justify-content: center;
+  }
 
+  * {
+    --right-menu-size: 0;
+    --left-menu-size: 0;
+  }
+}
